@@ -14,56 +14,56 @@ import java.util.stream.Collectors;
 
 public class AutenticacaoService {
 
-  private static final String BEARER = "Bearer ";
-  private static final String HEADER_AUTHORIZATION = "Authorization";
-  private static final String JWT_KEY = "signinKey";
-  private static final String AUTHORITIES = "authorities";
-  private static final int EXPIRATION_TOKEN = 3600000;
+    private static final String BEARER = "Bearer";
+    private static final String HEADER_AUTHORIZATION = "Authorization";
+    private static final String JWT_KEY = "signinKey";
+    private static final String AUTHORITIES = "authorities";
+    private static final int EXPIRATION_TOKEN_ONE_HOUR = 3600000;
 
-  static public void addJWTToken(HttpServletResponse response, Authentication authentication) {
+    static public void addJWTToken(HttpServletResponse response, Authentication authentication) {
 
-    Map<String, Object> claims = new HashMap<>();
+        Map<String, Object> claims = new HashMap<>();
 
-    claims.put(AUTHORITIES, authentication
-        .getAuthorities()
-        .stream()
-        .map(GrantedAuthority::getAuthority)
-        .collect(Collectors.toList()));
-
-    String jwtToken = Jwts.builder()
-        .setSubject(authentication.getName())
-        .setExpiration(new Date(System.currentTimeMillis() + EXPIRATION_TOKEN))
-        .signWith(SignatureAlgorithm.HS512, JWT_KEY)
-        .addClaims(claims)
-        .compact();
-
-    response.addHeader(HEADER_AUTHORIZATION, BEARER + jwtToken);
-    response.addHeader("Access-Control-Expose-Headers", HEADER_AUTHORIZATION);
-  }
-
-  static public Authentication obterAutenticacao(HttpServletRequest request) {
-
-    String token = request.getHeader(HEADER_AUTHORIZATION);
-
-    if (token != null) {
-
-      Claims user = Jwts.parser()
-          .setSigningKey(JWT_KEY)
-          .parseClaimsJws(token.replace(BEARER, ""))
-          .getBody();
-
-      if (user != null) {
-
-        List<SimpleGrantedAuthority> permissoes = ((ArrayList<String>) user.get(AUTHORITIES))
+        claims.put(AUTHORITIES, authentication.getAuthorities()
             .stream()
-            .map(SimpleGrantedAuthority::new)
-            .toList();
+            .map(GrantedAuthority::getAuthority)
+            .collect(Collectors.toList())
+        );
 
-        return new UsernamePasswordAuthenticationToken(user, null, permissoes);
-      } else {
-        throw new RuntimeException("Autenticação falhou");
-      }
+        String jwtToken = Jwts.builder()
+            .setSubject(authentication.getName())
+            .setExpiration(new Date(System.currentTimeMillis() + EXPIRATION_TOKEN_ONE_HOUR))
+            .signWith(SignatureAlgorithm.HS512, JWT_KEY)
+            .addClaims(claims)
+            .compact();
+
+        response.addHeader(HEADER_AUTHORIZATION, BEARER + " " + jwtToken);
+        response.addHeader("Access-Control-Expose-Headers", HEADER_AUTHORIZATION);
     }
-    return null;
-  }
+
+    static public Authentication obterAutenticacao(HttpServletRequest request) {
+
+        String token = request.getHeader(HEADER_AUTHORIZATION);
+
+        if (token != null) {
+
+            Claims user = Jwts.parser()
+                .setSigningKey(JWT_KEY)
+                .parseClaimsJws(token.replace(BEARER + " ", ""))
+                .getBody();
+
+            if (user != null) {
+
+                List<SimpleGrantedAuthority> permissoes = ((ArrayList<String>) user.get(AUTHORITIES))
+                    .stream()
+                    .map(SimpleGrantedAuthority::new)
+                    .toList();
+
+                return new UsernamePasswordAuthenticationToken(user, null, permissoes);
+            } else {
+                throw new RuntimeException("Autenticação falhou");
+            }
+        }
+        return null;
+    }
 }
